feat(gradle): add cache configuration